  * Fixed the possibility to have more prefixed for the same namespace
  * Fixed NullPointerException in the service MAPLE/profileSingleResourceMatchProblem (by updating MAPLE)
  * Fixed inability to disable history (in the ChangeTracker sail)
  * Fixed partial deletion of a commit from the validation graph after its validation
  * Updated to lime-api 0.3.3
  * Updated to maple 0.0.3

version 5.0
date: 30/01/2019
  * Added extension point for connecting to dataset catalogs, together with implementations targeting
  	Linked Open Vocabularies (https://lov.linkeddata.es/dataset/lov/) and the LOD Cloud (https://lod-cloud.net/)
  * Added the possibility to preload data into a project being created, including data retrieved through the 
    dataset catalog connection
  * Added functionality for owl:importing vocabularies retrieved through the dataset catalog connection
  * Updated e-mail configuration;
  * Added email notification when a user is enabled by the administrator
  * Added user status (online/offline) to the users list 
  * Improved speed of advanced search
  * Allowed CustomForm and FormCollection with custom namespaces
  * Enabled mass assignment of concepts to a scheme
  * Implemented support for Graph visualization
  * Added stackTrace info in error response and changed the serialization to JSON format;
  * Add the possibility to filter the commits shown in the History and Validation tabs by performer and
    validator (obviously, history only)
  * Fixed SKOS vocabulary not loaded, if SKOS is used only as model (and not as lexicalization model);
  * Added validation of RDF values (in particular, IRIs and literals) provided as arguments to the services
  * Introduced the possibility to configure the RDF Serializing Exporter (e.g. to inline blank nodes when
    serializing an ontology using Turtle)
  * Removed any DOCTYPE declaration in cached ontologies because of the issue eclipse/rdf4j#1202 (affecting
    Ontotext GraphDB 8.8.0)