@@ -12,6 +12,7 @@ date: dd/MM/yyyy
   * Fixed NullPointerException in the service MAPLE/profileSingleResourceMatchProblem (by updating MAPLE)
   * Fixed inability to disable history (in the ChangeTracker sail)
   * Fixed partial deletion of a commit from the validation graph after its validation
+  * Preserved entry order in StringToMapGenericConverter
   * Updated to lime-api 0.3.3
   * Updated to maple 0.0.3
 
